--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "turbo-potato-sobie-profile",
+  "name": "sobie-co-login",
   "version": "1.0.0",
-  "description": "CIS 486 Spring 2025 The Sobie Dev Co. Profile",
-  "main": "index.js",
+  "description": "A simple login system using Node.js, Express, and EJS.",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "dotenv": "^16.4.7",
+    "bcryptjs": "^3.0.2",
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "mongodb": "^6.12.0",
-    "multer": "^1.4.5-lts.2",
-    "nodemailer": "^6.10.1",
-    "nodemon": "^3.1.9",
-    "sha.js": "^2.4.11",
-    "sha256": "^0.2.0"
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "install": "^0.13.0",
+    "nodemailer": "^6.10.1"
   }
 }
